kubernetes/apps/external/pve04.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pve04
  namespace: external
spec:
  ports:
    - name: https
      protocol: TCP
      port: 8006
      targetPort: 8006
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: pve04
  namespace: external
  labels:
    kubernetes.io/service-name: pve04
addressType: IPv4
ports:
  - name: https
    protocol: TCP
    port: 8006
endpoints:
  - addresses:
      - 192.168.3.14
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: pve04-route
  namespace: external
spec:
  parentRefs:
    - name: passthrough
      namespace: gateway
  hostnames:
    - pve04.petebeegle.com
  rules:
    - backendRefs:
        - name: pve04
          port: 8006
