kubernetes/apps/external/unifi.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: unifi
  namespace: external
spec:
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: unifi
  namespace: external
  labels:
    kubernetes.io/service-name: unifi
addressType: IPv4
ports:
  - name: https
    protocol: TCP
    port: 443
endpoints:
  - addresses:
      - 192.168.1.1
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: unifi-route
  namespace: external
spec:
  parentRefs:
    - name: passthrough
      namespace: gateway
  hostnames:
    - unifi.petebeegle.com
  rules:
    - backendRefs:
        - name: unifi
          port: 443
